--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -78,4 +78,4 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: rustdoc
-          args: -- -D intra-doc-link-resolution-failure
+          args: -p h3 -- -D intra-doc-link-resolution-failure
